--- a/index.html
+++ b/index.html
@@ -8,32 +8,32 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <!-- SITE HEADER  -->
-  <header class="site-header">
-    <div class="container header-container">
-        <div class="site-header-link-wrapper">
-            <a class="site-header-link" href="#">
-                <img class="site-header-logo-img-emblem" src="img/site-emblem.svg" alt="" width="24" height="24" >
-                <img class="site-header-logo-img" src="img/coffeeroasters.png" alt="" width="223" height="24" srcset="img/coffeeroasters.png 1x, img/coffeeroasters@2x.png 2x">
-            </a>
+<div class="site-header-intro-wrapper">
+        <header class="site-header">
+        <div class="container header-container">
+            <div class="site-header-link-wrapper">
+                <a class="site-header-link" href="#">
+                    <img class="site-header-logo-img-emblem" src="img/site-emblem.svg" alt="" width="24" height="24" >
+                    <img class="site-header-logo-img" src="img/coffeeroasters.png" alt="" width="223" height="24" srcset="img/coffeeroasters.png 1x, img/coffeeroasters@2x.png 2x">
+                </a>
+            </div>
+            <nav class="site-nav">
+                <ul class="sitenav-list">
+                    <li class="sitenav-item">
+                        <a class="sitenav-link" href="">Home</a>
+                    </li>
+                    <li class="sitenav-item">
+                        <a class="sitenav-link" href="">About us</a>
+                    </li>
+                    <li class="sitenav-item">
+                        <a class="sitenav-link" href="">Create your plan</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <nav class="site-nav">
-            <ul class="sitenav-list">
-                <li class="sitenav-item">
-                    <a class="sitenav-link" href="">Home</a>
-                </li>
-                <li class="sitenav-item">
-                    <a class="sitenav-link" href="">About us</a>
-                </li>
-                <li class="sitenav-item">
-                    <a class="sitenav-link" href="">Create your plan</a>
-                </li>
-
-            </ul>
-        </nav>
-
+    </header>
     </div>
 
-  </header>
   <body>
       <main class="main-content">
           <!-- SITE HERO  -->
